--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <!-- Start Single Page Apps for GitHub Pages -->
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -45,6 +47,8 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
     crossorigin="anonymous">
+
+
 </body>
 
 </html>
